--- a/Views/ModeleDeVoitures/Delete.cshtml
+++ b/Views/ModeleDeVoitures/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Annee)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.img)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.img)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
