--- a/Views/ModeleDeVoitures/Details.cshtml
+++ b/Views/ModeleDeVoitures/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ModeleDeVoiture</h4>
+    <h4>Model</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,6 +27,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Annee)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.img)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.img)
         </dd>
     </dl>
 </div>
