--- a/Views/ModeleDeVoitures/Edit.cshtml
+++ b/Views/ModeleDeVoitures/Edit.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="Annee" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="img" class="control-label"></label>
+                <input asp-for="img" class="form-control" />
+                <span asp-validation-for="img" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
