--- a/Views/ModeleDeVoitures/Create.cshtml
+++ b/Views/ModeleDeVoitures/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Marque" class="control-label"></label>
@@ -28,10 +28,10 @@
                 <span asp-validation-for="Annee" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="img" class="control-label"></label>
-                <input asp-for="img" class="form-control" />
-                <span asp-validation-for="img" class="text-danger"></span>
+                <label class="control-label">Pic</label>
+                <input type="file" class="form-control" name="file" />
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
