--- a/Views/ModeleDeVoitures/Edit.cshtml
+++ b/Views/ModeleDeVoitures/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdModele" />
             <div class="form-group">
@@ -28,10 +28,13 @@
                 <input asp-for="Annee" class="form-control" />
                 <span asp-validation-for="Annee" class="text-danger"></span>
             </div>
+            <img src="~/images/@Model.img" height="150" />
+
+            <input type="hidden" asp-for="img" />
+
             <div class="form-group">
-                <label asp-for="img" class="control-label"></label>
-                <input asp-for="img" class="form-control" />
-                <span asp-validation-for="img" class="text-danger"></span>
+                <label class="control-label">Pic</label>
+                <input type="file" class="form-control" name="file" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
